welcome.lessons.welcome.bat.bool1.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
if (n>89){
	if(n<110){return true}
     }else{if (n>189){if (n<210){return true}
                      else{return false}}
}else{return false}
}else{return false}
	
}
